--- a/views/nav.html
+++ b/views/nav.html
@@ -7,7 +7,7 @@
         <div class="nav-menu" id="nav-menu">
             <a href="#home" class="nav-link">Home</a>
             <a href="#about" class="nav-link">About</a>
-            <a href="#experience" class="nav-link">Experience</a>
+            <!--<a href="#experience" class="nav-link">Experience</a>-->
             <!--<a href="#education" class="nav-link">Education</a>-->
             <a href="#certifications" class="nav-link">Certifications</a>
             <a href="#projects" class="nav-link">Projects</a>
